--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
+astroid==3.3.10
 contourpy==1.3.2
 cycler==0.12.1
+dill==0.4.0
 fonttools==4.58.5
+iniconfig==2.1.0
+isort==6.0.1
 kiwisolver==1.4.8
 matplotlib==3.10.3
+mccabe==0.7.0
 numpy==2.3.1
 packaging==25.0
 pillow==11.3.0
+platformdirs==4.3.8
+pluggy==1.6.0
+Pygments==2.19.2
+pylint==3.3.7
 pyparsing==3.2.3
+pytest==8.4.1
 python-dateutil==2.9.0.post0
--e git+https://github.com/Blosberg/python-intermediate-inflammation.git@72df521e23bd54afcde7b04509959c6a76149977#egg=python_intermediate_inflammation
 six==1.17.0
+tomlkit==0.13.3
