--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mypy_extensions==1.1.0
-numpy==2.3.1
+numpy
 packaging==25.0
 parso==0.8.4
 pathspec==0.12.1
